--- a/gift_list.html
+++ b/gift_list.html
@@ -4,37 +4,39 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Thaís e Bruno</title>
 
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Thaís e Bruno</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
-	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="icon" type="image/png" href="favicon.png">	
+		<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+		
+		<!-- Animate.css -->
+		<link rel="stylesheet" href="css/animate.css">
+		<!-- Icomoon Icon Fonts-->
+		<link rel="stylesheet" href="css/icomoon.css">
+		<!-- Bootstrap  -->
+		<link rel="stylesheet" href="css/bootstrap.css">
 
-	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
+		<!-- Magnific Popup -->
+		<link rel="stylesheet" href="css/magnific-popup.css">
 
-	<!-- Owl Carousel  -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+		<!-- Owl Carousel  -->
+		<link rel="stylesheet" href="css/owl.carousel.min.css">
+		<link rel="stylesheet" href="css/owl.theme.default.min.css">
 
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style.css">
+		<!-- Theme style  -->
+		<link rel="stylesheet" href="css/style.css">
 
-	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+		<!-- Modernizr JS -->
+		<script src="js/modernizr-2.6.2.min.js"></script>
+		<!-- FOR IE9 below -->
+		<!--[if lt IE 9]>
+		<script src="js/respond.min.js"></script>
+		<![endif]-->
 
 	</head>
 	<body>
@@ -42,147 +44,146 @@
 	<div class="tebw-loader"></div>
 	
 	<div id="page">
-	<nav class="tebw-nav" role="navigation">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-3 col-xs-5">
-					<div id="tebw-logo"><a href="index.html">T &amp; B<strong>.</strong></a></div>
-				</div>
-				<div class="col-md-9 col-xs-7 text-right menu-1">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li class="has-dropdown">
-							<a>Utilidades</a>
+		<nav class="tebw-nav" role="navigation">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-3 col-xs-5">
+						<div id="tebw-logo"><a href="index.html">T &amp; B<strong>.</strong></a></div>
+					</div>
+					<div class="col-md-9 col-xs-7 text-right menu-1">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li class="has-dropdown">
+								<a>Utilidades</a>
 								<ul class="dropdown">
 									<li><a href="dica_beleza.html">Dicas de beleza</a></li>
 									<li><a href="onde_ficar.html">Onde ficar</a></li>
 									<li><a href="o_que_vestir.html">O que vestir</a></li>
 								</ul>
-							</a>
-						</li>
-						<li class="active"><a href="gift_list.html">Presentes</a></li>
-						<li><a href="rsvp.html">RSVP</a></li>
-					</ul>
+							</li>
+							<li class="active"><a href="gift_list.html">Presentes</a></li>
+							<li><a href="rsvp.html">RSVP</a></li>
+						</ul>
+					</div>
+				</div>
+				
+			</div>
+		</nav>
+
+		<header id="tebw-header" class="tebw-cover tebw-cover-sm" role="banner" style="background-image:url(images/header.png);">
+		</header>
+
+
+		<div id="tebw-gallery">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center tebw-heading animate-box">
+						<h2>Presentes</h2>
+						<p>Ainda não finalizamos essa parte. Enquanto isso, quem ganha o presente é você: seguem disponíveis, por tempo limitado, algumas fotos do casal.</p>
+					</div>
+				</div>
+				<div class="row row-bottom-padded-md">
+					<div class="col-md-12">
+						<ul id="tebw-gallery-list">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site2.jpg); ">
+								<a href="images/gallery/site2.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site3.jpg); ">
+								<a href="images/gallery/site3.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site4.jpg); ">
+								<a href="images/gallery/site4.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site5.jpg); ">
+								<a href="images/gallery/site5.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site6.jpg); ">
+								<a href="images/gallery/site6.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site7.jpg); ">
+								<a href="images/gallery/site7.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site8.jpg); "> 
+								<a href="images/gallery/site8.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site9.jpg); ">
+								<a href="images/gallery/site9.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site10.jpg); ">
+								<a href="images/gallery/site10.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site11.jpg); ">
+								<a href="images/gallery/site11.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site12.jpg); ">
+								<a href="images/gallery/site12.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site13.jpg); ">
+								<a href="images/gallery/site13.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site14.jpg); "> 
+								<a href="images/gallery/site14.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site15.jpg); ">
+								<a href="images/gallery/site15.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site16.jpg); ">
+								<a href="images/gallery/site16.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site17.jpg); ">
+								<a href="images/gallery/site17.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site18.jpg); ">
+								<a href="images/gallery/site18.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site19.jpg); ">
+								<a href="images/gallery/site19.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site20.jpg); "> 
+								<a href="images/gallery/site20.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site21.jpg); ">
+								<a href="images/gallery/site21.jpg"></a>
+							</li>
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site22.jpg); "> 
+								<a href="images/gallery/site22.jpg"></a>
+							</li>
+						</ul>		
+					</div>
 				</div>
 			</div>
+		</div>
+
+		<div id="tebw-started" class="tebw-bg" style="background-image: url(images/footer.jpg); ">
+			<div class="overlay"></div>
+			<div class="container">
+				<div class="row animate-box">
+					<div class="col-md-8 col-md-offset-2 text-center tebw-heading">
+						<h2>RSVP</h2>
+						<p>Por favor confirme sua presença</p>
+					</div>
+				</div>
+				<div class="row animate-box">
+					<div class="col-md-6 col-xs-12 col-md-offset-3">
+						<a href="rsvp.html" class="btn btn-default btn-block">Contem comigo</a>
+					</div>
+				</div>
+			</div>
+		</div>
 			
-		</div>
-	</nav>
+		<footer id="tebw-footer" role="contentinfo">
+			<div class="container">
 
-	<header id="tebw-header" class="tebw-cover tebw-cover-sm" role="banner" style="background-image:url(images/header.png);">
-	</header>
-
-
-	<div id="tebw-gallery">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center tebw-heading animate-box">
-					<h2>Presentes</h2>
-					<p>Ainda não finalizamos essa parte. Enquanto isso, quem ganha o presente é você: seguem disponíveis, por tempo limitado, algumas fotos do casal.</p>
+				<div class="row copyright">
+					<div class="col-md-12 text-center">
+						<p>
+							<small class="block">© 2018 Copiado e alterado por Bruno</small>
+						</p>
+					</div>
 				</div>
-			</div>
-			<div class="row row-bottom-padded-md">
-				<div class="col-md-12">
-					<ul id="tebw-gallery-list">
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site2.jpg); ">
-							<a href="images/gallery/site2.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site3.jpg); ">
-							<a href="images/gallery/site3.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site4.jpg); ">
-							<a href="images/gallery/site4.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site5.jpg); ">
-							<a href="images/gallery/site5.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site6.jpg); ">
-							<a href="images/gallery/site6.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site7.jpg); ">
-							<a href="images/gallery/site7.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site8.jpg); "> 
-							<a href="images/gallery/site8.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site9.jpg); ">
-							<a href="images/gallery/site9.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site10.jpg); ">
-							<a href="images/gallery/site10.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site11.jpg); ">
-							<a href="images/gallery/site11.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site12.jpg); ">
-							<a href="images/gallery/site12.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site13.jpg); ">
-							<a href="images/gallery/site13.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site14.jpg); "> 
-							<a href="images/gallery/site14.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site15.jpg); ">
-							<a href="images/gallery/site15.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site16.jpg); ">
-							<a href="images/gallery/site16.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site17.jpg); ">
-							<a href="images/gallery/site17.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site18.jpg); ">
-							<a href="images/gallery/site18.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site19.jpg); ">
-							<a href="images/gallery/site19.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site20.jpg); "> 
-							<a href="images/gallery/site20.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site21.jpg); ">
-							<a href="images/gallery/site21.jpg"></a>
-						</li>
-						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site22.jpg); "> 
-							<a href="images/gallery/site22.jpg"></a>
-						</li>
-					</ul>		
-				</div>
-			</div>
-		</div>
-	</div>
 
-	<div id="tebw-started" class="tebw-bg" style="background-image: url(images/footer.jpg); ">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center tebw-heading">
-					<h2>RSVP</h2>
-					<p>Por favor confirme sua presença</p>
-				</div>
 			</div>
-			<div class="row animate-box">
-				<div class="col-md-6 col-xs-12 col-md-offset-3">
-					<a href="rsvp.html" class="btn btn-default btn-block">Contem comigo</a>
-				</div>
-			</div>
-		</div>
-	</div>
-		
-	<footer id="tebw-footer" role="contentinfo">
-		<div class="container">
-
-			<div class="row copyright">
-				<div class="col-md-12 text-center">
-					<p>
-						<small class="block">© 2018 Copiado e alterado por Bruno</small>
-					</p>
-				</div>
-			</div>
-
-		</div>
-	</footer>
+		</footer>
 	</div>
 
 	<div class="gototop js-top">
