gift list css improvement

--- a/gift_list.html
+++ b/gift_list.html
@@ -85,67 +85,67 @@
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-12">
 						<ul id="tebw-gallery-list">
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site2.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site2.jpg) no-repeat; ">
 								<a href="images/gallery/site2.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site3.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site3.jpg) no-repeat; ">
 								<a href="images/gallery/site3.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site4.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site4.jpg) no-repeat; ">
 								<a href="images/gallery/site4.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site5.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site5.jpg) no-repeat; ">
 								<a href="images/gallery/site5.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site6.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site6.jpg) no-repeat; ">
 								<a href="images/gallery/site6.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site7.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site7.jpg) no-repeat; ">
 								<a href="images/gallery/site7.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site8.jpg); "> 
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site8.jpg) no-repeat; "> 
 								<a href="images/gallery/site8.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site9.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site9.jpg) no-repeat; ">
 								<a href="images/gallery/site9.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site10.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site10.jpg) no-repeat; ">
 								<a href="images/gallery/site10.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site11.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site11.jpg) no-repeat; ">
 								<a href="images/gallery/site11.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site12.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site12.jpg) no-repeat; ">
 								<a href="images/gallery/site12.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site13.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site13.jpg) no-repeat; ">
 								<a href="images/gallery/site13.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site14.jpg); "> 
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site14.jpg) no-repeat; "> 
 								<a href="images/gallery/site14.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site15.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site15.jpg) no-repeat; ">
 								<a href="images/gallery/site15.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site16.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site16.jpg) no-repeat; ">
 								<a href="images/gallery/site16.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site17.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site17.jpg) no-repeat; ">
 								<a href="images/gallery/site17.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site18.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site18.jpg) no-repeat; ">
 								<a href="images/gallery/site18.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site19.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site19.jpg) no-repeat; ">
 								<a href="images/gallery/site19.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site20.jpg); "> 
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site20.jpg) no-repeat; "> 
 								<a href="images/gallery/site20.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site21.jpg); ">
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site21.jpg) no-repeat; ">
 								<a href="images/gallery/site21.jpg"></a>
 							</li>
-							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site22.jpg); "> 
+							<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site22.jpg) no-repeat; "> 
 								<a href="images/gallery/site22.jpg"></a>
 							</li>
 						</ul>		
